@@ -3,9 +3,11 @@
 	PR c++/59635
 	PR c++/59636
 	PR c++/59629
+	PR c++/59638
 	* g++.dg/cpp1y/pr59635.C: New testcase.
 	* g++.dg/cpp1y/pr59636.C: New testcase.
 	* g++.dg/cpp1y/pr59629.C: New testcase.
+	* g++.dg/cpp1y/pr59638.C: New testcase.
 
 2014-01-06  Martin Jambor  <mjambor@suse.cz>
 
